k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lunch-api
  labels:
    app.kubernetes.io/part-of: lunch-api
    environment: base
